# app-dev-ma

./: README.md
buggy-books/src/main/java/no/ntnu/crudrest/: Book.java  BuggyBookApplication.java
ie2_hello_world/: Cargo.toml
ie2_hello_world/src/: hello_controller.rs  main.rs  not_found.rs
ie3_resttest/: Cargo.toml  Exercise 5.2.postman_collection.json
ie3_resttest/src/: book_controller.rs  main.rs
ie3_resttest/src/book_controller/: author.rs  book.rs  book_collection.rs
ie3_resttest/src/book_controller/book_collection/: book.rs
ie3_resttest/tests/: common.rs  integration_test.rs
